--- a/index.html
+++ b/index.html
@@ -4,35 +4,46 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Canadian UPC URL Generator</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f9f9f9;
+      background: #f4f8fb;
       color: #333;
       margin: 0;
       padding: 0;
-    }
-    .layout {
       display: flex;
-      min-height: 100vh;
+      flex-direction: row;
     }
     .sidebar {
       width: 250px;
-      background-color: #e8f0ff;
+      background: #003366;
+      color: white;
       padding: 20px;
-      border-right: 1px solid #ccc;
+      min-height: 100vh;
+    }
+    .sidebar h2 {
+      font-size: 20px;
+      border-bottom: 1px solid #ffffff33;
+      padding-bottom: 10px;
+      margin-bottom: 20px;
+    }
+    .sidebar p {
+      font-size: 14px;
+      line-height: 1.5;
     }
     .container {
       flex: 1;
       padding: 40px;
-      background: white;
+      background: #f9f9f9;
     }
     h1 {
       text-align: center;
       color: #003366;
     }
-    textarea, input[type="file"] {
+    textarea, input[type="file"], input[type="checkbox"] {
       width: 100%;
       padding: 10px;
       margin: 10px 0 20px;
@@ -45,7 +56,7 @@
       color: white;
       padding: 10px 20px;
       border: none;
-      margin-right: 10px;
+      margin: 5px 10px 5px 0;
       border-radius: 6px;
       cursor: pointer;
     }
@@ -82,99 +93,124 @@
       padding: 10px;
       border-radius: 5px;
     }
-    .drop-zone {
-      border: 2px dashed #003366;
-      border-radius: 10px;
-      padding: 20px;
-      text-align: center;
-      margin-bottom: 20px;
-      color: #666;
-      background-color: #f0f8ff;
-    }
-    .drop-zone.dragover {
-      background-color: #d0e8ff;
-      color: #000;
-    }
-    @media (max-width: 768px) {
-      .layout {
-        flex-direction: column;
-      }
-      .sidebar {
-        width: 100%;
-        border-right: none;
-        border-bottom: 1px solid #ccc;
-      }
-    }
   </style>
 </head>
 <body>
-  <div class="layout">
-    <aside class="sidebar">
-      <h2>Tools</h2>
-      <p><strong>UPC Count:</strong> <span id="upcCount">0</span></p>
-      <h3>Recent UPCs</h3>
-      <ul id="recentUPCs" style="font-size: 14px; list-style: disc; padding-left: 20px;"></ul>
-      <h3>Tips</h3>
-      <ul style="font-size: 13px; padding-left: 20px;">
-        <li>Paste or upload Excel files</li>
-        <li>Drag & drop supported</li>
-        <li>Export up to 85,000+ URLs</li>
-      </ul>
-    </aside>
+  <div class="sidebar">
+    <h2>Info Panel</h2>
+    <p>✅ Paste or upload UPCs<br>✅ Export 85,000+ URLs<br>✅ Copy to clipboard<br>✅ No Home Hardware</p>
+    <p>💡 Tip: You can drop a `.csv` file with UPCs directly into the browser window!</p>
+  </div>
+  <div class="container">
+    <h1>Canadian UPC URL Generator</h1>
 
-    <div class="container">
-      <h1>Canadian UPC URL Generator</h1>
+    <label for="productList">Enter UPCs (one per line):</label>
+    <textarea id="productList" rows="10" placeholder="e.g.&#10;711753&#10;036000291452"></textarea>
 
-      <label for="productList">Enter or paste UPCs (one per line):</label>
-      <textarea id="productList" rows="10" placeholder="e.g.&#10;711753&#10;036000291452" oninput="updateSidebarInfo()"></textarea>
+    <label for="fileUpload">Or drag and drop a CSV file:</label>
+    <input type="file" id="fileUpload" accept=".csv,.txt" />
 
-      <div class="drop-zone" id="dropZone">
-        Drag & drop an Excel file here or <input type="file" id="fileInput" accept=".xlsx,.xls" />
-      </div>
+    <label><input type="checkbox" class="storeCheckbox" value="homeDepotCa" checked> Home Depot Canada</label><br>
 
+    <div style="margin-top: 20px;">
       <button onclick="generateURLs()">Generate URLs</button>
       <button class="danger" onclick="clearHistory()">Clear History</button>
       <button onclick="copyURLsToClipboard()">Copy All URLs</button>
       <button onclick="exportCSV()">Export as CSV</button>
+    </div>
 
-      <div id="resultsContainer"></div>
+    <div id="resultsContainer"></div>
 
-      <div id="historySection">
-        <h2>History</h2>
-        <div id="historyContent"></div>
-      </div>
+    <div id="historySection">
+      <h2>History</h2>
+      <div id="historyContent"></div>
     </div>
   </div>
 
   <script>
     function generateURLs() {
       const productList = document.getElementById("productList").value.trim().split(/\r?\n/).filter(Boolean);
+      const selectedStores = Array.from(document.querySelectorAll(".storeCheckbox:checked")).map(cb => cb.value);
+
       if (productList.length === 0) {
         alert("Please enter at least one UPC.");
         return;
       }
+      if (selectedStores.length === 0) {
+        alert("Please select at least one store.");
+        return;
+      }
 
-      let resultHTML = `<table><thead><tr><th>UPC</th><th>Home Depot Canada</th></tr></thead><tbody>`;
+      let resultHTML = `<table><thead><tr><th>UPC</th>`;
+      selectedStores.forEach(store => {
+        resultHTML += `<th>${store === "homeDepotCa" ? "Home Depot Canada" : store}</th>`;
+      });
+      resultHTML += `</tr></thead><tbody>`;
+
       const timestamp = new Date().toLocaleString();
       const historyEntry = {
         timestamp,
         productList,
-        selectedStores: ["homeDepotCa"],
+        selectedStores,
         results: [],
         allUrls: []
       };
 
       productList.forEach(input => {
-        const url = `https://www.homedepot.ca/search?q=${input}`;
-        historyEntry.allUrls.push(url);
-        historyEntry.results.push({ input, urls: { homeDepotCa: url } });
-        resultHTML += `<tr><td>${input}</td><td><a href="${url}" target="_blank">Link</a></td></tr>`;
+        const row = { input, urls: {} };
+        resultHTML += `<tr><td>${input}</td>`;
+        selectedStores.forEach(store => {
+          let url = "";
+          if (store === "homeDepotCa") {
+            url = `https://www.homedepot.ca/search?q=${input}`;
+          }
+          row.urls[store] = url;
+          historyEntry.allUrls.push(url);
+          resultHTML += `<td><a href="${url}" target="_blank">Link</a></td>`;
+        });
+        resultHTML += `</tr>`;
+        historyEntry.results.push(row);
       });
 
       resultHTML += `</tbody></table>`;
       document.getElementById("resultsContainer").innerHTML = resultHTML;
-      updateSidebarInfo();
       saveToHistory(historyEntry);
+    }
+
+    function getCurrentURLs() {
+      const rows = document.querySelectorAll("#resultsContainer table tbody tr");
+      const urls = [];
+      rows.forEach(row => {
+        const anchor = row.querySelector("td:nth-child(2) a");
+        if (anchor) urls.push(anchor.href);
+      });
+      return urls;
+    }
+
+    function copyURLsToClipboard() {
+      const urls = getCurrentURLs();
+      if (urls.length === 0) {
+        alert("No URLs found to copy.");
+        return;
+      }
+      navigator.clipboard.writeText(urls.join('\n')).then(() => {
+        alert("URLs copied to clipboard!");
+      });
+    }
+
+    function exportCSV() {
+      const urls = getCurrentURLs();
+      if (urls.length === 0) {
+        alert("No URLs found to export.");
+        return;
+      }
+      const blob = new Blob([urls.join('\r\n')], { type: 'text/csv;charset=utf-8;' });
+      const link = document.createElement("a");
+      link.href = URL.createObjectURL(blob);
+      link.download = "generated_urls.csv";
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
     }
 
     function saveToHistory(entry) {
@@ -187,6 +223,7 @@
     function displayHistory() {
       const container = document.getElementById("historyContent");
       const history = JSON.parse(localStorage.getItem("urlGenHistory") || "[]");
+
       if (history.length === 0) {
         container.innerHTML = "<p>No history yet.</p>";
         return;
@@ -196,7 +233,12 @@
       history.forEach(entry => {
         let html = `<div class="history-entry"><strong>${entry.timestamp}</strong><br><ul style="padding-left:20px">`;
         entry.results.forEach(item => {
-          html += `<li>${item.input}: <a href="${item.urls.homeDepotCa}" target="_blank">Home Depot Canada</a></li>`;
+          html += `<li>${item.input}: `;
+          entry.selectedStores.forEach(store => {
+            const url = item.urls[store];
+            html += `<a href="${url}" target="_blank">${store}</a> `;
+          });
+          html += `</li>`;
         });
         html += `</ul></div>`;
         container.innerHTML += html;
@@ -210,88 +252,17 @@
       }
     }
 
-    function copyURLsToClipboard() {
-      const history = JSON.parse(localStorage.getItem("urlGenHistory") || "[]");
-      if (history.length === 0) {
-        alert("No URLs to copy yet.");
-        return;
-      }
-      const latest = history[0];
-      const textToCopy = latest.allUrls.join('\n');
-      navigator.clipboard.writeText(textToCopy).then(() => {
-        alert("URLs copied to clipboard!");
-      });
-    }
-
-    function exportCSV() {
-      const history = JSON.parse(localStorage.getItem("urlGenHistory") || "[]");
-      if (history.length === 0) {
-        alert("No URLs to export yet.");
-        return;
-      }
-      const latest = history[0];
-      const csvContent = latest.allUrls.join('\r\n');
-      const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
-      const link = document.createElement("a");
-      link.href = URL.createObjectURL(blob);
-      link.download = "generated_urls.csv";
-      document.body.appendChild(link);
-      link.click();
-      document.body.removeChild(link);
-    }
-
-    function updateSidebarInfo() {
-      const upcs = document.getElementById("productList").value.trim().split(/\r?\n/).filter(Boolean);
-      document.getElementById("upcCount").textContent = upcs.length;
-
-      const recent = upcs.slice(0, 5);
-      const recentList = document.getElementById("recentUPCs");
-      recentList.innerHTML = "";
-      recent.forEach(upc => {
-        const li = document.createElement("li");
-        li.textContent = upc;
-        recentList.appendChild(li);
-      });
-    }
-
-    // Drag & drop + file input support
-    const dropZone = document.getElementById("dropZone");
-    const fileInput = document.getElementById("fileInput");
-
-    dropZone.addEventListener("dragover", (e) => {
-      e.preventDefault();
-      dropZone.classList.add("dragover");
-    });
-
-    dropZone.addEventListener("dragleave", () => {
-      dropZone.classList.remove("dragover");
-    });
-
-    dropZone.addEventListener("drop", (e) => {
-      e.preventDefault();
-      dropZone.classList.remove("dragover");
-      const file = e.dataTransfer.files[0];
-      if (file) readExcel(file);
-    });
-
-    fileInput.addEventListener("change", (e) => {
+    document.getElementById("fileUpload").addEventListener("change", function(e) {
       const file = e.target.files[0];
-      if (file) readExcel(file);
-    });
-
-    function readExcel(file) {
+      if (!file) return;
       const reader = new FileReader();
-      reader.onload = (e) => {
-        const data = new Uint8Array(e.target.result);
-        const workbook = XLSX.read(data, { type: 'array' });
-        const sheet = workbook.Sheets[workbook.SheetNames[0]];
-        const upcs = XLSX.utils.sheet_to_json(sheet, { header: 1 }).map(row => row[0]).filter(Boolean);
-        const textarea = document.getElementById("productList");
-        textarea.value = upcs.join('\n');
-        updateSidebarInfo();
+      reader.onload = function(evt) {
+        const text = evt.target.result;
+        const lines = text.split(/\r?\n/).map(line => line.trim()).filter(Boolean);
+        document.getElementById("productList").value = lines.join('\n');
       };
-      reader.readAsArrayBuffer(file);
-    }
+      reader.readAsText(file);
+    });
 
     displayHistory();
   </script>
